objects/DMAPP__DM_Sales_Process__c.object
<CustomObject>
    <description>ADMIN ONLY DATA CONFIG

This object is responsible for the maintenance of the Playbook Sales Processes. These can be accessed from the Playbook Admin application.</description>
    <fields>
        <fullName>DMAPP__Average_Deal_Size__c</fullName>
        <inlineHelpText>Enter the size of a typical or average sales opportunity.</inlineHelpText>
        <label>Average Deal Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Closure_Duration__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Enter the number of days typically taken to close an opportunity after all steps have been completed.  This can be zero.</inlineHelpText>
        <label>Closure Duration (Days)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__ComparisionJSONFileName__c</fullName>
        <description>Contains file name for comparision report</description>
        <label>ComparisionJSONFileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Default_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Description__c</fullName>
        <description>Description of the sales process, displayed to the user when clicking through to a new opportunity that doesn\&apos;t automatically get placed into a sales process and requires the user to select which process to use.\n\nWhen is this sales process applied, etc.</description>
        <inlineHelpText>Enter a description for the Sales Process Playbook that conveys sufficient information when you are subsequently viewing or editing the process.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Final_Stage_Probability__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Probability of the opportunity closing after all qualifiers have been checked positively.

Even after all the qualifiers have been successfully completed, some opportunities may be lost.</description>
        <inlineHelpText>This is the probability of the opportunity closing after all steps have been completed.  This is usually 100%</inlineHelpText>
        <label>Final Stage Probability %</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Genius_Stage_List__c</fullName>
        <description>A list of the initial stages used to populate the Genius Wizard. These may subsequently change and are here for reference only. They are pipe delimited.</description>
        <label>Genius Stage List</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Industry_Vertical__c</fullName>
        <inlineHelpText>The industry that is relevant for your Sales Process Playbook.</inlineHelpText>
        <label>Industry Vertical</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High Technology</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Energy &amp; Power</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Industrials</fullName>
                </value>
                <value>
                    <fullName>Materials</fullName>
                </value>
                <value>
                    <fullName>Telecommunications</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Build My Own</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMAPP__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Not in use</description>
        <inlineHelpText>Not in use</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Multiple_Buyers__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Do you usually sell to a single individual or are there many people involved in the buying process? Select Multiple or Single buyer.</inlineHelpText>
        <label>Multiple Buyers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Order__c</fullName>
        <description>Not in use</description>
        <inlineHelpText>Not in use</inlineHelpText>
        <label>Order Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Pebble_Percentage__c</fullName>
        <defaultValue>0.4</defaultValue>
        <label>Pebble Percentage</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Pebble_Value__c</fullName>
        <defaultValue>1000</defaultValue>
        <label>Pebble Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Rock_Percentage__c</fullName>
        <defaultValue>0.4</defaultValue>
        <label>Rock Percentage</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Rock_Value__c</fullName>
        <defaultValue>10000000</defaultValue>
        <label>Rock Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Sales_Cycle_Duration__c</fullName>
        <inlineHelpText>Enter the number of days that it usually takes to close a sales opportunity from the time when it first became an opportunity to when you close the deal</inlineHelpText>
        <label>Sales Cycle Duration (Days)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Sum_Of_Stages_Duration__c</fullName>
        <label>Sum Of Stages Duration</label>
        <summarizedField>DMAPP__DM_Sales_Process_Stage__c.DMAPP__Duration__c</summarizedField>
        <summaryForeignKey>DMAPP__DM_Sales_Process_Stage__c.DMAPP__DM_Sales_Process__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMAPP__Threshold__c</fullName>
        <defaultValue>0.7</defaultValue>
        <description>The likelihood that this opportunity will close for this sales process</description>
        <inlineHelpText>Used for Forecasting. 

An opportunity must achieve the threshold percentage (and be within the forecasting close date) in order to be deemed &quot;Projected&quot; in the Forecast Analysis for Dealmaker.</inlineHelpText>
        <label>Projected Threshold</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Total_Sales_Cycle_Duration__c</fullName>
        <description>Sum of all stage duration plus sales process closure duration</description>
        <formula>DMAPP__Sum_Of_Stages_Duration__c  +  DMAPP__Closure_Duration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sales Cycle Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Version__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>A version number for the sales process. Auto-incremented. DO NOT UPDATE MANUALLY.

On change of a sales process, existing opportunities will be associated with the &quot;old&quot; version id. Dealmaker can then identify any opps that need to be &quot;reset&quot;.</inlineHelpText>
        <label>Version</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sales Process</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <columns>DMAPP__Default_Process__c</columns>
        <columns>NAME</columns>
        <columns>DMAPP__Closure_Duration__c</columns>
        <columns>DMAPP__Final_Stage_Probability__c</columns>
        <columns>DMAPP__Version__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Sales Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Processes</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>DMAPP__Closure_Duration_Check</fullName>
        <active>true</active>
        <errorConditionFormula>DMAPP__Closure_Duration__c &lt; 0</errorConditionFormula>
        <errorDisplayField>DMAPP__Closure_Duration__c</errorDisplayField>
        <errorMessage>Closure duration must be positive</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DMAPP__Closure_duration_length</fullName>
        <active>true</active>
        <errorConditionFormula>DMAPP__Closure_Duration__c  &gt; 1000</errorConditionFormula>
        <errorDisplayField>DMAPP__Closure_Duration__c</errorDisplayField>
        <errorMessage>Closure Duration cannot be greater than 1000 days</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DMAPP__Percentage_check_FSP</fullName>
        <active>true</active>
        <errorConditionFormula>DMAPP__Final_Stage_Probability__c &gt; 1 ||  DMAPP__Final_Stage_Probability__c &lt; 0</errorConditionFormula>
        <errorDisplayField>DMAPP__Final_Stage_Probability__c</errorDisplayField>
        <errorMessage>Only 0-100% is valid</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DMAPP__Percentage_check_PP</fullName>
        <active>true</active>
        <errorConditionFormula>DMAPP__Pebble_Percentage__c  &gt; 1 || DMAPP__Pebble_Percentage__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>DMAPP__Pebble_Percentage__c</errorDisplayField>
        <errorMessage>Only 0-100% is valid</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DMAPP__Percentage_check_PT</fullName>
        <active>true</active>
        <errorConditionFormula>DMAPP__Threshold__c  &gt; 1 || DMAPP__Threshold__c &lt; 0</errorConditionFormula>
        <errorDisplayField>DMAPP__Threshold__c</errorDisplayField>
        <errorMessage>Only 0-100% is valid</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DMAPP__Percentage_check_RP</fullName>
        <active>true</active>
        <errorConditionFormula>DMAPP__Rock_Percentage__c &gt; 1 || DMAPP__Rock_Percentage__c &lt; 0</errorConditionFormula>
        <errorDisplayField>DMAPP__Rock_Percentage__c</errorDisplayField>
        <errorMessage>Only 0-100% is valid</errorMessage>
    </validationRules>
</CustomObject>